Refactor docs & set up dataloaders
